[package]
name = "httprun"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
boa_engine = "0.20"
boa_gc = "0.20"
colored = "3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
thiserror = "2"
